--- a/laboratory-work-6/5.5_Deserialization_Prevention.md
+++ b/laboratory-work-6/5.5_Deserialization_Prevention.md
@@ -61,7 +61,7 @@
 # CWE-502: Десеріалізація ненадійних даних
 
 ## Опис
-The application deserializes untrusted data without sufficiently verifying that the resulting data will be valid.
+Програма десеріалізує ненадійні дані без достатньої перевірки дійсності отриманих даних.
 
 ## Детальний опис 
 Часто зручно серіалізувати об’єкти для зв’язку або зберегти їх для подальшого використання. Однак десеріалізовані дані або код часто можна змінити без використання наданих функцій доступу, якщо вони не використовують криптографію для захисту. Більше того, будь-яка криптографія все одно буде захистом на стороні клієнта, що є небезпечним припущенням безпеки.
@@ -95,4 +95,69 @@ Cписок показує можливі області, для яких мож
 
 
 
+
+# CWE-611: Неправильне обмеження посилання на зовнішню сутність XML
+
+## Опис
+Програмне забезпечення обробляє XML-документ, який може містити XML-сутності з URI, які розв’язуються з документами поза передбачуваною сферою контролю, змушуючи продукт вставляти неправильні документи у вихідні дані.
+
+## Детальний опис 
+Документи XML додатково містять визначення типу документа (DTD), яке, серед інших функцій, дає змогу визначати сутності XML. Сутність можна визначити, надавши рядок підстановки у формі URI. Синтаксичний аналізатор XML може отримати доступ до вмісту цього URI та вбудувати цей вміст назад у документ XML для подальшої обробки.
+
+Надсилаючи XML-файл, який визначає зовнішню сутність із file:// URI, зловмисник може змусити програму обробки прочитати вміст локального файлу. Наприклад, URI, такий як "file:///c:/winnt/win.ini", позначає (у Windows) файл C:\Winnt\win.ini, або file:///etc/passwd позначає пароль файл у системах на основі Unix. Використовуючи URI з іншими схемами, такими як http://, зловмисник може змусити програму надсилати вихідні запити на сервери, до яких зловмисник не може отримати прямий доступ, що можна використовувати для обходу обмежень брандмауера або приховування джерела атак, наприклад сканування портів.
+
+Після того, як вміст URI прочитано, він повертається до програми, яка обробляє XML. Ця програма може відтворювати дані (наприклад, у повідомленні про помилку), таким чином відкриваючи вміст файлу.
+
+## Платформи, що застосовуються
+Cписок показує можливі області, для яких може виникнути дана слабкість. Вони можуть стосуватися конкретних іменованих мов, операційних систем, архітектур, парадигм, технологій або класу таких платформ. Платформа вказана разом із частотою появи даного недоліку для цього екземпляра.
+
+*Мови*
+- XML (невизначена поширеність)
+*Технології*
+Клас: Інтернет-базовані (невизначена поширеність)
+
+## Загальні наслідки
+
+| Область застосування | Вплив | Ймовірність |
+| --------------- | ------------------- | --------------- |
+| Конфіденційність | Технічний вплив: читання даних програми; Читання файлів або каталогів. Якщо зловмиснику вдається включити створений DTD і ввімкнуто розпізнавач сутностей за замовчуванням, зловмисник може мати доступ до довільних файлів у системі. | |
+| Цілісність | Технічний вплив: механізм захисту від байпасу. DTD може містити довільні запити HTTP, які може виконувати сервер. Це може призвести до інших атак, які використовують довірчі відносини сервера з іншими об’єктами. | |
+| Доступність | Технічний вплив: DoS: споживання ресурсів (ЦП); DoS: споживання ресурсів (пам’яті). Програмне забезпечення може споживати надмірну кількість циклів ЦП або пам’яті, використовуючи URI, який вказує на великий файл, або пристрій, який завжди повертає дані, такі як /dev/random. Крім того, URI може посилатися на файл, який містить багато вкладених або рекурсивних посилань на об’єкти, щоб ще більше уповільнити аналіз. | |
+
+
+
+# CWE-95: Неправильна нейтралізація директив у динамічно оцінюваному коді («впровадження Eval»)
+
+## Опис
+Програмне забезпечення отримує вхідні дані від вищестоящого компонента, але не нейтралізує або неправильно нейтралізує синтаксис коду перед використанням вхідних даних у виклику динамічної оцінки (наприклад, "eval").
+
+## Детальний опис 
+Це може дозволити зловмиснику виконати довільний код або принаймні змінити код, який можна виконати.
+
+## Платформи, що застосовуються
+Cписок показує можливі області, для яких може виникнути дана слабкість. Вони можуть стосуватися конкретних іменованих мов, операційних систем, архітектур, парадигм, технологій або класу таких платформ. Платформа вказана разом із частотою появи даного недоліку для цього екземпляра.
+
+*Мови*
+- Java (невизначена поширеність)
+- JavaScript (невизначена поширеність)
+- Python (невизначена поширеність)
+- Perl (невизначена поширеність)
+- PHP (невизначена поширеність)
+- Ruby (невизначена поширеність)
+
+*Технології*
+Клас: інтерпретований (невизначена поширеність)
+
+## Загальні наслідки
+
+| Область застосування | Вплив | Ймовірність |
+| --------------- | ------------------- | --------------- |
+| Конфіденційність | Введений код міг отримати доступ до обмежених даних/файлів. | |
+| Управління доступом | У деяких випадках ін'єкційний код контролює автентифікацію; це може призвести до віддаленої вразливості.| |
+| Управління доступом | Впроваджений код може отримати доступ до ресурсів, доступ до яких зловмиснику заборонено. | |
+| Цілісність Конфіденційність Доступність | Атаки з впровадженням коду можуть призвести до втрати цілісності даних майже в усіх випадках, оскільки впроваджувані дані контрольної площини завжди є випадковими для виклику чи запису даних. Крім того, впровадження коду часто може призвести до виконання довільного коду. | |
+| Невідмова | Часто дії, які виконує впроваджений керуючий код, не реєструються. | |
+
+## Ймовірність експлойту
+Середня
 
